--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -10,16 +10,19 @@ The schedule for the different curricula are listed here:
 {% if site.curriculum == "dc-ecology" %}
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Week 1</h3>
     <table class="table table-striped">
+	<tr> <td>July 8</td> <td>Day 1</td> </tr>    
       <tr>
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
       <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organization in Spreadsheets</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
+      <tr> <td>July 9</td> <td>Day 2</td> </tr>
+	<tr><td> </td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
+      <tr> <td>July 10</td> <td>Day 3</td> </tr>
       <tr>
-        <td>Afternoon</td>
+        <td> </td>
         <td>
           {% if site.flavor == "r" %}
           <a href="https://datacarpentry.org/R-ecology-lesson/">Introduction to R</a>
@@ -33,9 +36,10 @@ The schedule for the different curricula are listed here:
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>Week 2</h3>
     <table class="table table-striped">
-      <tr> <td>Morning</td>
+    <tr> <td>July 13</td> <td>Day 4</td> </tr>  
+    <tr> <td> </td>
         <td>
           {% if site.flavor == "r" %}
           <a href="https://datacarpentry.org/R-ecology-lesson/">Continuation of R: Data analysis and Visualization</a>
@@ -46,7 +50,9 @@ The schedule for the different curricula are listed here:
           {% endif %}
         </td>
       </tr>
-      <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/sql-ecology-lesson/">Data Management with SQL</a></td></tr>
+      <tr> <td>July 15</td> <td>Day 5</td> </tr>
+      <tr> <td> </td><td><a href="https://datacarpentry.org/sql-ecology-lesson/">Data Management with SQL</a></td></tr>
+      <tr> <td>July 17</td> <td>Day 6</td> </tr>
       <tr>
 	<td>Evening</td>
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
