fix post-survey link

--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -57,15 +57,12 @@ The schedule for the different curricula are listed here:
         </td>
       </tr>
 
-      <tr> <td> </td><td><a href="https://datacarpentry.org/sql-ecology-lesson/">Data Management with SQL</a></td></tr>
-      <tr>
-	<td>Evening</td>
+      <tr> <td> </td><td><a href="https://datacarpentry.org/sql-ecology-lesson/">Data Management with SQL</a></td></tr>      
+      <tr><td> </td> <td> END </td></tr>
+	<tr>
+	<td>END</td>
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
-      </tr>
-      <tr>
-	<td> </td>
-	<td> END </td>
-      </tr>
+      </tr>    
 {% endcomment %}    
     </table>
   </div>
