update to Eve's suggested schedule

--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -11,14 +11,14 @@ The schedule for the different curricula are listed here:
 <div class="row">
   <div class="col-md-6">
     <h3>Week 1</h3>
-    <table class="table table-striped">
-	<tr> <td>July 8</td> <td>Intro to Carpentries, Before We Start, Intro to R</td> </tr>    
+    <table class="table table-striped">	
       <tr>
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr> <td>July 9</td> <td>Starting with Data, Manipulating Data</td> </tr>
-      <tr> <td>July 10</td> <td>Visualizing Data</td> </tr>
+      <tr> <td>July 8</td> <td>Intro to Carpentries, Before We Start, Intro to R</td> </tr>    
+      <tr> <td>July 9</td> <td>Starting with Data</td> </tr>
+      <tr> <td>July 10</td> <td>Manipulating Data</td> </tr>
 {% comment %}	    
       <tr><td>Morning</td> 
 	      <td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organization in Spreadsheets</a></td></tr>
@@ -41,9 +41,10 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6">
     <h3>Week 2</h3>
     <table class="table table-striped">
-    <tr> <td>July 13</td> <td>Intermmediate R, more plotting? </td> </tr>
-    <tr> <td>July 15</td> <td>Data Management with SQL</td> </tr>
-    <tr> <td>July 17</td> <td>Cont. SQL, R and SQL</td> </tr>	    
+    <tr> <td>July 13</td> <td>Visualizind Data </td> </tr>
+    <tr> <td>July 15</td> <td>Dataframe Manipulation with dplyr & tidyr</td> </tr>
+    <tr> <td>July 17</td> <td>More plotting with ggplot2 </td> </tr>
+    <tr> <td> </td> <td>Functions Explained</td> </tr>	    
     {% comment %}
     <tr> <td> </td>
         <td>
