--- a/_includes/dc/setup.html
+++ b/_includes/dc/setup.html
@@ -12,6 +12,44 @@ Ecology workshops
   can be found at <a href="https://datacarpentry.org/ecology-workshop/setup-r-workshop.html">
     the workshop overview site</a>.
 </p>
+
+<h3>Spreadsheet Program</h3>
+<p>
+To interact with spreadsheets, we can use LibreOffice, Microsoft Excel, Gnumeric, OpenOffice.org, or other programs. 
+Commands may differ a bit between programs, but the general ideas for thinking about spreadsheets are the same. For this workshop, 
+we recommend using either Microsoft Excel (paid software) or LibreOffice (free and open source). Other spreadsheet programs may
+not have all of the features we will be exploring in this workshop.
+</p>
+<p>
+  To install LibreOffice, go to their <a href ="https://www.libreoffice.org/download/download/"> download page </a>. The website should
+automatically select the correct option for your operating system. Click the "Download" button. You will go to a page that asks about a
+donation, but you don’t need to make one. Your download should begin automatically. Once the installer is downloaded, double click on it (you may need to open your Downloads folder) and LibreOffice should install.
+</p>
+
+<h3>Open Refine</h3>
+
+  <p>
+    OpenRefine is a Java program that runs on your local machine (not on the cloud). Although it displays in your browser, no web 
+connection is needed and your data remains local. You need to have a ‘Java Runtime Environment’ (JRE) installed on your computer to run 
+OpenRefine. If you don’t already have one installed then you can download and install from http://java.com by going to the site and 
+clicking “Free Java Download”.
+  </p>  
+<p> 
+  To install OpenRefine, go to their <a href="http://openrefine.org/download.html"> download page </a>. From the download page, select either "Windows 
+kit", "Mac kit", or "Linux kit" - depending on your operating system - and follow the instructions next to your download link. This 
+lesson has been tested with all versions of OpenRefine up to the latest tested version, 3.2. **If you are using an older version, it is 
+recommended you upgrade to the latest tested version.** After installing, you can delete the installer `.dmg` file. 
+</p>
+
+<p>
+  You may get an error message: "OpenRefine.app can't be opened because it is from an unidentified developer." If you get this message, 
+open your system preferences and click "Security & Privacy". You will see a message "OpenRefine.app was blocked from opening because it
+is from an unidentified developer." Click "Open Anyway" and "Yes". OpenRefine should open in your default web browser.
+</p>
+
+<p>
+  OpenRefine does not support Internet Explorer or Edge. Please use Firefox, Chrome or Safari instead.
+</p>
 <div id="r"> <!-- Start of 'R' section. -->
   <h3>R</h3>
 
