--- a/_includes/dc/syllabus.html
+++ b/_includes/dc/syllabus.html
@@ -63,6 +63,7 @@ The syllabus for the different curricula are listed here:
   {% else %}
   {% include warning-flavor.html %}
   {% endif %}
+  {% comment %}
   <div class="col-md-6">
     <h3 id="syllabus-ecology-sql">Data Management with SQL</h3>
     <ul>
@@ -72,6 +73,7 @@ The syllabus for the different curricula are listed here:
       <li><a href="https://datacarpentry.org/sql-ecology-lesson/03-sql-joins/index.html">Joins</a></li>
     </ul>
   </div>
+  {% endcomment %}
 </div>
 
 
