--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -14,7 +14,7 @@ The schedule for the different curricula are listed here:
     <table class="table table-striped">	
       <tr>
 	<td>Before starting</td>
-	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
+	<td> Pre-workshop survey & Setup</td>
       </tr>
       <tr> <td>July 8</td> <td>Intro to Carpentries, Before We Start, Intro to R</td> </tr>    
       <tr> <td>July 9</td> <td>Starting with Data</td> </tr>
@@ -41,10 +41,11 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6">
     <h3>Week 2</h3>
     <table class="table table-striped">
-    <tr> <td>July 13</td> <td>Visualizind Data </td> </tr>
+    <tr> <td>July 13</td> <td>Visualizing Data </td> </tr>
     <tr> <td>July 15</td> <td>Dataframe Manipulation with dplyr & tidyr</td> </tr>
     <tr> <td>July 17</td> <td>More plotting with ggplot2 </td> </tr>
-    <tr> <td> </td> <td>Functions Explained</td> </tr>	    
+    <tr> <td> </td> <td>Functions Explained</td> </tr>
+    <tr> <td>End </td> <td>Post-workshop survey</td> </tr>
     {% comment %}
     <tr> <td> </td>
         <td>
