--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -16,7 +16,9 @@ The schedule for the different curricula are listed here:
 	<td>Before starting</td>
 	<td> Pre-workshop survey & Setup</td>
       </tr>
-      <tr> <td>July 8</td> <td>Intro to Carpentries, Before We Start, Intro to R</td> </tr>    
+      <tr> <td>July 8</td> <td>Intro to Carpentries</td> </tr> 
+      <tr> <td> </td> <td> Spreadsheets/Open Refine</td> </tr>
+      <tr> <td> </td> <td>Intro to R</td> </tr>
       <tr> <td>July 9</td> <td>Starting with Data</td> </tr>
       <tr> <td>July 10</td> <td>Manipulating Data</td> </tr>
 {% comment %}	    
