added swc links

--- a/_includes/dc/syllabus.html
+++ b/_includes/dc/syllabus.html
@@ -42,7 +42,9 @@ The syllabus for the different curricula are listed here:
       <li><a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with Data</a></li>
       <li><a href="https://datacarpentry.org/R-ecology-lesson/03-dplyr.html">Manipulating Data Frames with <code>dplyr</code></a></li>
       <li><a href="https://datacarpentry.org/R-ecology-lesson/04-visualization-ggplot2.html">Data Visualisation with <code>ggplot2</code></a></li>  
+      {% comment %}
       <li><a href="https://datacarpentry.org/R-ecology-lesson/05-r-and-databases.html">Interacting with Databases with <code>dbplyr</code></a></li>
+      {% endcomment %}      
     </ul>
   </div>
   {% elsif site.flavor == "python" %}
@@ -74,6 +76,13 @@ The syllabus for the different curricula are listed here:
     </ul>
   </div>
   {% endcomment %}
+  <h3 id="syllabus-r">R for Reproducible Scientific Analysis</h3>
+    <ul>
+      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/13-dplyr/index.html">Dataframe Manipulation with <code>dplyr</code></a> </li>
+      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/14-tidyr/index.html">Dataframe Manipulation with <code>tidyr</code></a></li>
+      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2/index.html">Publication-quality graphics with <code>ggplot2</code></a></li>
+      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/10-functions/index.html">Functions explained</a></li>
+    </ul>
 </div>
 
 
