--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -43,12 +43,12 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6">
     <h3>Week 2</h3>
     <table class="table table-striped">
-    <tr> <td>July 13</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/04-visualization-ggplot2.html">Data Visualisation </a></td> </tr>
-    <tr> <td>July 15</td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/13-dplyr/index.html">Dataframe Manipulation with dplyr</a></td> </tr>
-    <tr> <td> </td>	   <td><a href="http://swcarpentry.github.io/r-novice-gapminder/14-tidyr/index.html">Dataframe Manipulation with tidyr</a> </td> 
-    <tr> <td>July 17</td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2/index.html">More plotting with ggplot2 </a></td> </tr>
-    <tr> <td> </td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/10-functions/index.html">Functions Explained</a></td> </tr>
-    <tr> <td>End </td> <td>Post-workshop survey</td> </tr>
+    	<tr> <td>July 13</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/04-visualization-ggplot2.html">Data Visualisation </a></td> </tr>
+    	<tr> <td>July 15</td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/13-dplyr/index.html">Dataframe Manipulation with dplyr</a></td> </tr>
+    	<tr> <td>       </td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/14-tidyr/index.html">Dataframe Manipulation with tidyr</a> </td> </tr> 
+    	<tr> <td>July 17</td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2/index.html">More plotting with ggplot2 </a></td> </tr>
+    	<tr> <td>	</td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/10-functions/index.html">Functions Explained</a></td> </tr>
+   	<tr> <td>End </td>    <td>Post-workshop survey</td> </tr>
     {% comment %}
     <tr> <td> </td>
         <td>
