--- a/_includes/dc/syllabus.html
+++ b/_includes/dc/syllabus.html
@@ -76,6 +76,7 @@ The syllabus for the different curricula are listed here:
     </ul>
   </div>
   {% endcomment %}
+ <div class="col-md-6">
   <h3 id="syllabus-r">R for Reproducible Scientific Analysis</h3>
     <ul>
       <li><a href="http://swcarpentry.github.io/r-novice-gapminder/13-dplyr/index.html">Dataframe Manipulation with <code>dplyr</code></a> </li>
@@ -83,6 +84,7 @@ The syllabus for the different curricula are listed here:
       <li><a href="http://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2/index.html">Publication-quality graphics with <code>ggplot2</code></a></li>
       <li><a href="http://swcarpentry.github.io/r-novice-gapminder/10-functions/index.html">Functions explained</a></li>
     </ul>
+  </div>
 </div>
 
 
