--- a/_includes/dc/setup.html
+++ b/_includes/dc/setup.html
@@ -13,6 +13,12 @@ Ecology workshops
     the workshop overview site</a>.
 </p>
 
+<h3>Slack</h3>
+<p>
+During the workshop, we will use <a href = "www.slack.com"> Slack </a> as a place for learners to ask questions, get help, and participate in polls. 
+You will receive an invitation to join the Slack workplace via Instructor, Eve Bohnett. If you have not yet received this email, please contact workshop host: Altaf Kassam
+</p>
+
 <h3>Spreadsheet Program</h3>
 <p>
 To interact with spreadsheets, we can use LibreOffice, Microsoft Excel, Gnumeric, OpenOffice.org, or other programs. 
