--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -18,9 +18,9 @@ The schedule for the different curricula are listed here:
       </tr>
       <tr> <td>July 8</td> <td>Intro to Carpentries</td> </tr> 
       <tr> <td> </td> <td> Spreadsheets/Open Refine</td> </tr>
-      <tr> <td> </td> <td><a href="https://datacarpentry.org/R-ecology-lesson/01-intro-to-r.html">Intro to R</a></td> </tr>
-      <tr> <td>July 9</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with Data</a></td> </tr>
-      <tr> <td>July 10</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/03-dplyr.html">Manipulating Data</a></td> </tr>
+      <tr> <td>July 9 </td> <td><a href="https://datacarpentry.org/R-ecology-lesson/01-intro-to-r.html">Intro to R</a></td> </tr>
+      <tr> <td>July 10</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with Data</a></td> </tr>
+      
 {% comment %}	    
       <tr><td>Morning</td> 
 	      <td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organization in Spreadsheets</a></td></tr>
@@ -43,10 +43,11 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6">
     <h3>Week 2</h3>
     <table class="table table-striped">
-    	<tr> <td>July 13</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/04-visualization-ggplot2.html">Data Visualisation </a></td> </tr>
-    	<tr> <td>July 15</td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/13-dplyr/index.html">Dataframe Manipulation with dplyr</a></td> </tr>
-    	<tr> <td>       </td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/14-tidyr/index.html">Dataframe Manipulation with tidyr</a> </td> </tr> 
-    	<tr> <td>July 17</td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2/index.html">More plotting with ggplot2 </a></td> </tr>
+    	<tr> <td>July 13</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/03-dplyr.html">Manipulating Data</a></td> </tr>
+	<tr> <td>July 15</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/04-visualization-ggplot2.html">Data Visualisation </a></td> </tr>
+    	<tr> <td>July 17</td> <td> TBD, audience's choice</tr>
+	<tr> <td>       </td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/13-dplyr/index.html">More Dataframe Manipulation with dplyr</a></td> </tr>	
+    	<tr> <td> 	</td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2/index.html">More plotting with ggplot2 </a></td> </tr>
     	<tr> <td>	</td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/10-functions/index.html">Functions Explained</a></td> </tr>
    	<tr> <td>End </td>    <td>Post-workshop survey</td> </tr>
     {% comment %}
