--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -45,7 +45,7 @@ The schedule for the different curricula are listed here:
     <table class="table table-striped">
     	<tr> <td>July 13</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/03-dplyr.html">Manipulating Data</a></td> </tr>
 	<tr> <td>July 15</td> <td><a href="https://datacarpentry.org/R-ecology-lesson/04-visualization-ggplot2.html">Data Visualisation </a></td> </tr>
-    	<tr> <td>July 17</td> <td> TBD, audience's choice</tr>
+	    <tr> <td>July 17</td> <td> TBD, audience's choice </td></tr>
 	<tr> <td>       </td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/13-dplyr/index.html">More Dataframe Manipulation with dplyr</a></td> </tr>	
     	<tr> <td> 	</td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2/index.html">More plotting with ggplot2 </a></td> </tr>
     	<tr> <td>	</td> <td><a href="http://swcarpentry.github.io/r-novice-gapminder/10-functions/index.html">Functions Explained</a></td> </tr>
